[package]
name = "wasm-client"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
web-transport = "0.9.7"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
bytes = "1.10"
futures = "0.3"
web-sys = { version = "0.3", features = [
    "console",
    "Document",
    "Element",
    "HtmlElement",
    "Node",
    "Window",
    "HtmlInputElement",
    "HtmlButtonElement",
    "HtmlDivElement",
    "WebTransport",
    "WebTransportOptions",
    "WebTransportSendStream",
    "WebTransportReceiveStream",
    "WebTransportBidirectionalStream",
    "WebTransportCloseInfo",
    "WebTransportError",
    "WebTransportErrorSource",
    "WebTransportErrorOptions",
    "WebTransportCongestionControl",
] }
console_error_panic_hook = "0.1"
once_cell = "1.20"

[profile.release]
opt-level = "s"
